[project]
name = "smart-sso"
version = "0.1.0"
description = "SSO 服务:RS256 签发 JWT + JWKS 公钥端点,供 smart_talkflow 验签消费。"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Hariku" }]
keywords = ["sso", "jwt", "jwks", "oidc", "auth", "rs256"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Security",
]
dependencies = [
    "cryptography>=49.0.0",
    "fastapi>=0.137.2",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.2",
    "pyjwt>=2.13.0",
    "uvicorn[standard]>=0.49.0",
]

